--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,15 @@
     margin: 0px 0px 60px 0px;
 }
 body{
-      background: url(../img/gi.png);
-  
+       background-color: #EBF1F1;
+  background:url(../img/si.jpg);
+
+  opacity: 0.1px;
 }
 
-p
-{
-  font-family: 'Coming Soon', cursive;
-}
+
+
+
 
 /****   MENU   *****/
 .navbar-default {
@@ -21,7 +22,7 @@ p
 
 .navbar-default .navbar-nav>li>a {
     color: #ffffff;
-    font-family: 'Coming Soon', cursive;
+   font-family: 'Bitter', serif;
     font-size: 20px;
 }
 }
@@ -37,74 +38,77 @@ p
 
 .navbar-default .navbar-brand {
     color: #ffffff;
-    font-family: 'Coming Soon', cursive;
+   font-family: 'Bitter', serif;
     font-size: 26px;
 }
 
 
 
 /****   fondo *****/
-.container-fondo
-{
-   
-    height: 400px;
-    background: url(../img/globoo.jpg);
-    
-}
 
-.container-fondo h1
-{color: black;
+
+.container h3
+{color: #E4E0E0;
 font-size: 80px;
-font-family: Pacifico;
+font-family: 'Bitter', serif;
 }
 
-.container-fondo p
+.container em
 {
-color: #6F6969;
-font-size: 35px;
-font-family: Pacifico;
-text-shadow: 5px 5px 5px white;
+font-family: 'Bitter', serif; 
+color:white;
 }
 
+.well
+{
+  
+background-color: transparent;
+}
 
-
-
-/**.about-me**/
+/**          about-me       **/
 .about-me .biografia img {
   float: left;
   width: 200px;
-  margin-right: 20px; 
   
   }
 
-.about-me {
-  padding: 20px 80px; }
+
 
 .about-me p {
   font-size: 20px;
-  line-height: 1.5; }
+  line-height: 1.5; 
+ }
 
 
   .texto
 {
   
   padding-top: 40px;
-    margin-right: 120px;
-    margin-left: 120px;
-
- padding: 10px 30px; 
+   
+  
   border: #18BC9C 5px solid; 
   border-top-left-radius: 20px; 
   border-bottom-right-radius: 20px; 
   
   }
 
-  .about-me h3
+  .about-me p
   {
-    font-family: 'Coming Soon', cursive;
+    font-size: 20px;
+    
     text-transform: uppercase;
 
   }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -122,10 +126,9 @@ text-shadow: 5px 5px 5px white;
   
   .habilidades h3
   {
-    font-family: 'Coming Soon', cursive;
+     font-family: 'Bitter', serif;
     text-transform: uppercase;
 
-  }
   }
 
 .habilidades p {
@@ -136,7 +139,7 @@ text-shadow: 5px 5px 5px white;
   .habilidades-wi
 {
   
-  background: url(../img/habilidades.jpg);
+  background-color: #F3F0F0;
   }
 
 .progress {
@@ -159,7 +162,7 @@ text-shadow: 5px 5px 5px white;
 }
 
 
-/**skill**/
+/**portafolio**/
 
  #portafolio img {
   float: left;
@@ -177,17 +180,16 @@ text-shadow: 5px 5px 5px white;
 
   .portafolio-me h3
   {
-    font-family: 'Coming Soon', cursive;
+    font-family: 'Bitter', serif;
     text-transform: uppercase;
 
   }
 
 .portafolio-wi
 {
-  background: url(../img/portafolio3.jpg);
+  background-color:#5085B0;
   height: 500px;
 }
-
 
 
 
@@ -207,7 +209,7 @@ margin: 30px 30px 30px 0px;
 {
   height: 300px;
   width: 400px;
-  border-radius: 20%;
+  border-radius: 05%;
   width: 180px;
   margin-right: 15px;
   border:3px solid #555;
@@ -222,3 +224,95 @@ margin: 30px 30px 30px 0px;
   display: inline-block;
   margin-right: 20px;
 }
+
+
+/****       CONTACTO     *****/
+
+#contacto img {
+  float: left;
+  width: 300px;
+  margin-right: 20px; 
+  
+  }
+
+.contactame-me {
+  padding: 20px 80px; }
+
+.contactame-me p {
+  font-size: 20px;
+  line-height: 1.5; }
+
+  .contactame-me h3
+  {
+    font-family: 'Bitter', serif;
+    text-transform: uppercase;
+
+  }
+
+.contactame-wi
+{
+  background-color:#F3F0F0;
+  height: 500px;
+}
+
+@import url(http://fonts.googleapis.com/css?family=Raleway+Dots);
+@import url(http://fonts.googleapis.com/css?family=Advent+Pro:400,200,700);
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+html, body {
+  margin: 0;
+  background-color: #74d4b3;
+}
+
+section #services {
+  text-align: center;
+  transform: translatez(0);
+}
+section #services h2 {
+  margin: 80px 0px 40px;
+  color: #fff;
+  font-size: 2.4em;
+  font-family: 'Raleway Dots', sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+}
+section #services li {
+  width: 120px;
+  height: 140px;
+  display: inline-block;
+  margin: 20px;
+  list-style: none;
+}
+section #services li div {
+  width: 120px;
+  height: 120px;
+  color: #74d4b3;
+  font-size: 3.4em;
+  text-align: center;
+  line-height: 120px;
+  background-color: #fff;
+  transition: all 0.5s ease;
+}
+section #services li div:hover {
+  transform: rotate(360deg);
+  border-radius: 100px;
+}
+section #services li span {
+  width: 120px;
+  height: 20px;
+  display: block;
+  padding: 15px 0px;
+  color: #fff;
+  font-family: 'Advent Pro', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+
+
+  *{outline: 1px solid red}
